--- a/styles/app.css
+++ b/styles/app.css
@@ -1,78 +1,120 @@
+* {outline: none;}
+
 body {
-  background: #34911f; /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover,  #34911f 0%, #295b22 100%); /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#34911f), color-stop(100%,#295b22)); /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover,  #34911f 0%,#295b22 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover,  #34911f 0%,#295b22 100%); /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover,  #34911f 0%,#295b22 100%); /* IE10+ */
-  background: radial-gradient(ellipse at center,  #34911f 0%,#295b22 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#34911f', endColorstr='#295b22',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  margin: 0;
+  padding: 0;
+  background-image: url('../images/table-texture.jpg');
+  min-height: 600px;
+  min-width:800px; 
+}
+
+body:before {
+    content: " ";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(47,102,70,0.12)), color-stop(100%,rgba(19,40,28,0.85))); /* Chrome,Safari4+ */
+    background: -webkit-radial-gradient(center, ellipse cover,  rgba(47,102,70,0.12) 0%,rgba(19,40,28,0.85) 100%); /* Chrome10+,Safari5.1+ */
+    background: radial-gradient(ellipse at center,  rgba(47,102,70,0.12) 0%,rgba(19,40,28,0.85) 100%); /* W3C */
+}
+
+.table {
+  border: 3px solid #000;
+  border-radius: 30px;
+  height: 600px;
+  width: 900px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -300px;
+  margin-left: -450px;
+  overflow: hidden;
+
+}
+
+.dealer-hand-container {
+  margin-top: 35px;
+}
+.hand {
+  height: 236px;
+  width: 285px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .card {
   background-color: white;
   float: left;
   border: solid 1px black;
-  width: 100px;
+  width: 120px;
   border-radius: 5px;
-  height: 140px;
+  height: 167px;
   margin-right: 20px;
-  box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+  box-shadow: 3px 3px 7px rgba(0,0,0,0.5);
 }
 
 .covered {
-  background-color: black;
-}
-
-.hand {
-  overflow: auto;
-  height: 225px;
-  /*margin: 0 0 0 125px;*/
-  /*width: 250px;*/
-}
-
-.table {
-  height: 600px;
-  width: 800px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -300px;
-  margin-left: -400px;
+  background-image: url('../images/card-back.png') !important;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  font-size:0px;
 }
 
 button {
-  width: 60px;
-  height: 25px;
+  width: 100px;
+  height: 35px;
+  font-size:20px;
   margin-left: 5px;
   background-color: white;
-  border: 4px solid #194719;
+  border: 4px solid #999;
   border-radius: 10px;
-  transition: height 0.3s, width 0.3s, background-color 0.3s, margin-left 0.3s, margin-top 0.3s;
-  /*-webkit-transition: height 0.5s, width 0.5s, -webkit-background-color 0.5s;*/
+  box-shadow: 3px 3px 3px #000;
+  transition: box-shadow 0.5s, height 0.5s, width 0.5s, margin-left 0.5s, margin-top 0.5s;
 }
 
 button:hover {
-  background-color: #ccc;
-  width: 71px;
-  height: 31px;
+  width: 106px;
+  height: 39px;
   margin-top: -3px;
-  margin-left: -3px;
+  margin-left: 0px;
+  box-shadow: 1px 1px 8px #000;
 }
 
 button:disabled {
-  width: 60px;
-  height: 25px;
-  margin-top: 0;
-  margin-left: 0;
+  width: 100px;
+  height: 35px;
+  margin-top:0;
+  margin-left: 5px;
   background-color: #194719;
 }
 
 h2 {
+  margin:10px 0 10px 0;
   text-align: center;
+  color:#ddd;
+}
+.button-box {
+  height: 32px;
+  width: 102px;
+  float:left;
+  margin-right:40px;
+}
+.button-box:first-child {
+  margin-left:315px;
 }
 
 .button-holder {
+  position: absolute;
+  bottom:0px;
+  margin-top:20px;
+  padding-top:15px;
   width: 100%;
-  height: 40px;
+  height: 50px;
+  background-color: rgba(47,102,70,0.4);
+  border-top:1px solid #000;
+
 }
