--- a/styles/app.css
+++ b/styles/app.css
@@ -116,5 +116,21 @@ h2 {
   height: 50px;
   background-color: rgba(47,102,70,0.4);
   border-top:1px solid #000;
+}
 
+.newGameOptions {
+  position: absolute;
+  margin-top: 320px;
+  top: 50%;
+  width: 100%;
+  height: 60px;
+}
+#startNewGame {
+  position: absolute;
+  left:50%;
+  height: 50px;
+  width: 200px;
+  font-size:20px;
+  text-align: center;
+  margin: 5px 0 0 -100px;
 }
