Fixed start new game. Added winner declaration view

--- a/styles/app.css
+++ b/styles/app.css
@@ -116,14 +116,16 @@ h2 {
   height: 50px;
   background-color: rgba(47,102,70,0.4);
   border-top:1px solid #000;
+  z-index: 4;
 }
 
 .newGameOptions {
-  position: absolute;
-  margin-top: 320px;
-  top: 50%;
+  position: relative;
+  /*margin-top: 320px;*/
+  /*top: 50%;*/
   width: 100%;
   height: 60px;
+  z-index: -2;
 }
 #startNewGame {
   position: absolute;
@@ -132,5 +134,30 @@ h2 {
   width: 200px;
   font-size:20px;
   text-align: center;
-  margin: 5px 0 0 -100px;
+  margin: -7px 0 0 -100px;
+}
+
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000;
+  opacity: .6;
+  z-index: 3;
+  display: none;
+}
+
+.messagesContainer {
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -200px;
+  height: 200px;
+  width: 400px;
+  z-index: 4;
+  display: none;
 }
